@@ -186,15 +186,17 @@
 	'S_WITH_SUBNODES'=>			'With subnodes',
 	
 //	acknow.php
-	'S_ACKNOWLEDGES'=>			'Acknowledges',
-	'S_ACKNOWLEDGE'=>			'Acknowledge',
-	'S_RETURN'=>				'Return',
+	'S_ACKNOWLEDGES'=>				'Acknowledges',
+	'S_ACKNOWLEDGE'=>				'Acknowledge',
+	'S_RETURN'=>					'Return',
 	'S_ACKNOWLEDGE_ALARM_BY'=>		'Acknowledge alarm by',
 	'S_ADD_COMMENT_BY'=>			'Add comment by',
-	'S_COMMENT_ADDED'=>			'Comment added',
+	'S_COMMENT_ADDED'=>			'	Comment added',
 	'S_CANNOT_ADD_COMMENT'=>		'Cannot add coment',
-	'S_ALARM_ACKNOWLEDGES_BIG'=>		'ALARM ACKNOWLEDGES',
+	'S_ALARM_ACKNOWLEDGES_BIG'=>	'ALARM ACKNOWLEDGES',
 	'S_ACKNOWLEDGE_ADDED'=>			'Acknowledge added',
+	'S_SYS_BULK_ACKNOWLEDGE'=>		'----[BULK ACKNOWLEDGE]----',
+	'S_BULK_ACKNOWLEDGE'=>			'Bulk acknowledge',
 
 //	actionconf.php
 	'S_CONFIGURATION_OF_ACTIONS'=>		'Configuration of actions',
@@ -368,6 +370,9 @@
 	'S_YELLOW'=>				'Yellow',
 
 //	config.php
+	'S_EVENT_ACKNOWLEDGES'=>		'Event acknowledges',
+	'S_DAYS'=>						'Days',
+	'S_EVENT_EXPIRATION_TIME'=>			'Event expiration time',
 	'S_CANNNOT_UPDATE_VALUE_MAP'=>		'Cannot update value map',
 	'S_VALUE_MAP_ADDED'=>			'Value map added',
 	'S_CANNNOT_ADD_VALUE_MAP'=>		'Cannot add value map',
@@ -1173,6 +1178,7 @@
 	'S_SEC_SMALL'=>				'sec',
 	'S_COUNTS'=>				'Counts',
 	'S_LAST_OF'=>				'Last of',
+	'S_MULTIPLE_TRUE_EVENTS'=>	'Multiple TRUE events',
 	'S_SHOW_DISABLED_TRIGGERS'=>		'Show disabled triggers',
 	'S_HIDE_DISABLED_TRIGGERS'=>		'Hide disabled triggers',
 
@@ -1180,6 +1186,8 @@
 	'S_EXCLUDE'=>				'Exclude',
 	'S_INCLUDE'=>				'Include',
 	'S_POSITION'=>				'Position',
+	'S_MULTIPLE_EVENTS'=>		'Multiple events',
+	'S_EVENT_GENERATION'=>		'Event generation',
 
 //	tr_comments.php
 	'S_TRIGGER_COMMENTS'=>			'Trigger comments',
@@ -1190,25 +1198,30 @@
 
 //	tr_status.php
 	'S_STATUS_OF_TRIGGERS'=>		'Status of triggers',
-	'S_STATUS_OF_TRIGGERS_BIG'=>		'STATUS OF TRIGGERS',
+	'S_STATUS_OF_TRIGGERS_BIG'=>	'STATUS OF TRIGGERS',
 	'S_SHOW_ONLY_TRUE'=>			'Show only true',
-	'S_HIDE_ACTIONS'=>			'Hide actions',
-	'S_SHOW_ACTIONS'=>			'Show actions',
-	'S_SHOW_ALL_TRIGGERS'=>			'Show all triggers',
-	'S_HIDE_DETAILS'=>			'Hide details',
-	'S_SHOW_DETAILS'=>			'Show details',
-	'S_SELECT'=>				'Select',
-	'S_HIDE_SELECT'=>			'Hide select',
-	'S_TRIGGERS_BIG'=>			'TRIGGERS',
-	'S_NAME_BIG'=>				'NAME',
-	'S_SEVERITY_BIG'=>			'SEVERITY',
+	'S_HIDE_ACTIONS'=>				'Hide actions',
+	'S_SHOW_ACTIONS'=>				'Show actions',
+	'S_SHOW_ALL'=>					'Show all',
+	'S_HIDE_ALL'=>					'Hide all',
+	'S_SHOW_ONLY_TRUE'=>			'Show only true',
+	'S_SHOW_NOFALSEFORB'=>			'Show all(no FALSE for B)',
+	'S_SHOW_UNACKNOWLEDGED'=>		'Show unacknowledged',
+	'S_SHOW_TRUE_UNACKNOWLEDGED'=>	'Show true-unacknowledged',
+	'S_HIDE_DETAILS'=>				'Hide details',
+	'S_SHOW_DETAILS'=>				'Show details',
+	'S_SELECT'=>					'Select',
+	'S_HIDE_SELECT'=>				'Hide select',
+	'S_TRIGGERS_BIG'=>				'TRIGGERS',
+	'S_NAME_BIG'=>					'NAME',
+	'S_SEVERITY_BIG'=>				'SEVERITY',
 	'S_LAST_CHANGE_BIG'=>			'LAST CHANGE',
-	'S_LAST_CHANGE'=>			'Last change',
-	'S_COMMENTS'=>				'Comments',
-	'S_ACKNOWLEDGED'=>			'Acknowledged',
+	'S_LAST_CHANGE'=>				'Last change',
+	'S_COMMENTS'=>					'Comments',
+	'S_ACKNOWLEDGED'=>				'Acknowledged',
 	'S_NOT_ACKNOWLEDGED'=>			'Not Acknowledged',
-	'S_ACK'=>				'Ack',
-	'S_NEVER'=>				'Never',
+	'S_ACK'=>						'Ack',
+	'S_NEVER'=>						'Never',
 
 //	users.php
 	'S_ZABBIX_USER'=>			'ZABBIX User',
